--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,5 +1,5 @@
-.header{
-    background-image: url('../assets/img/arriba.svg');
+header{
+    background-image: url('../src/assets/img/arriba.svg');
     background-position: top center;
     background-repeat: no-repeat;
     background-size: cover;
